changed api links

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ananthakrishnantm.github.io/Home",
+  "homepage": "https://ananthakrishnantm.github.io/MovieTicketBookingWeb/",
   "name": "movie-ticket-booking",
   "private": true,
   "version": "0.0.0",
